# scarab

./: .clang-format  .clangd  .gitignore  .gitmodules  LICENSE  PARAMS.kaby_lake_srrip  README.md  run_jobs.sh  run_srrip.sh  victim-cache-design.org
src/: BUGS  CMakeLists.txt  Doxyfile  Makefile  PARAMS.ben.2lev.llc14cycles.1ch.1core  PARAMS.ben.2lev.llc14cycles.1ch.1core.3200  PARAMS.ben.2lev.llc14cycles.1ch.4cores  PARAMS.ben.2lev.llc14cycles.1ch.4cores.3200  PARAMS.ben.2lev.llc14cycles.1ch.4cores.6400  PARAMS.ben.2lev.llc14cycles.2ch.1core  PARAMS.ben.2lev.llc14cycles.2ch.1core.3200  PARAMS.ben.2lev.llc14cycles.2ch.1core.6400  PARAMS.ben.2lev.llc14cycles.2ch.4cores  PARAMS.ben.2lev.llc14cycles.2ch.4cores.3200  PARAMS.ben.2lev.llc14cycles.2ch.8cores  PARAMS.ben.2lev.llc14cycles.2ch.8cores.3200  PARAMS.ben.2lev.llc14cycles.2ch.8cores.6400  PARAMS.kaby_lake  addr_trans.c  addr_trans.h  br_stat.cc  br_stat.h  cache_part.c  cache_part.h  cmp_model.c  cmp_model.h  cmp_model_support.c  cmp_model_support.h  core.param.def  core.param.h  core.stat.def  ctype_pin_inst.h  dcache_stage.c  dcache_stage.h  decode_stage.c  decode_stage.h  dram_sched_table.def  dumb_model.c  dumb_model.h  exec_ports.c  (+62 more)
src/bp/: bp.c  bp.h  bp.param.def  bp.param.h  bp.stat.def  bp_conf.c  bp_conf.h  bp_table.def  bp_targ_mech.c  bp_targ_mech.h  cbp_table.def  cbp_to_scarab.cc  cbp_to_scarab.h  gshare.cc  gshare.h  hybridgp.cc  hybridgp.h  mtage_unlimited.cc  mtage_unlimited.h  pc_table.cc  pc_table.h  tagescl.cc  tagescl.h
src/bp/template_lib/: loop_predictor.h  statistical_corrector.h  tage.h  tagescl.h  tagescl_configs.h  utils.h
src/debug/: CMakeLists.txt  debug.param.def  debug.param.h  debug_macros.h  debug_print.c  debug_print.h  memview.c  memview.h  pipeview.c  pipeview.h
src/dvfs/: dvfs.c  dvfs.h  dvfs.param.def  dvfs.param.h  perf_pred.c  perf_pred.h  power_pred.c  power_pred.h
src/frontend/: frontend.c  frontend.h  frontend_intf.c  frontend_intf.h  frontend_table.def  pin_exec_driven_fe.cc  pin_exec_driven_fe.h  pin_trace_fe.c  pin_trace_fe.h  pin_trace_read.cc  pin_trace_read.h
src/frontend/memtrace/: memtrace_fe.cc  memtrace_fe.h  memtrace_trace_reader.cc  memtrace_trace_reader.h  memtrace_trace_reader_memtrace.cc  memtrace_trace_reader_memtrace.h
src/globals/: CMakeLists.txt  assert.h  enum.c  enum.h  global_defs.h  global_types.h  global_vars.h  op_pool.c  op_pool.h  param_enum_headers.h  utils.c  utils.h
src/gtest_main/: CMakeLists.txt
src/isa/: CMakeLists.txt  isa.c  isa.h  isa_macros.h  x86_regs.def
src/libs/: CMakeLists.txt  cache_lib.c  cache_lib.h  cache_lib_new.c  cache_lib_new.h  hash_lib.c  hash_lib.h  list_lib.c  list_lib.h  malloc_lib.c  malloc_lib.h  new_cache_lib.cpp  new_cache_lib.h  port_lib.c  port_lib.h
src/libs/cache_lib/: CMakeLists.txt  cache.h  new_cache_lib.h  repl.cc  repl.cpp  repl.h
src/libs/pipeline_stage_lib/: CMakeLists.txt  pipeline_stage.h  stage_data.cc  stage_data.h
src/memory/: cache_part.c  cache_part.h  mem_req.c  mem_req.h  memory.c  memory.h  memory.param.def  memory.param.h  memory.stat.def
src/pin/pin_exec/: .gitignore  analysis_functions.cc  analysis_functions.h  assert.h  development_notes  exception_handling.cc  exception_handling.h  exception_test.c  globals.cc  globals.h  illop_test.c  instruction_processing.cc  instruction_processing.h  main_loop.cc  main_loop.h  makefile.rules  pin_exec.cpp  pin_fe_globals.h  pintool_test_functions.h  read_mem_map.h  recover_test.c  redirect_test.c  retire_test.c  rollback.cpp  rollback_structs.h  run_pin_tests.py  scarab_interface.cc  scarab_interface.h  temp_files  utils.h
src/pin/pin_lib/: CMakeLists.txt  Makefile  README.md  decoder.cc  decoder.h  gather_scatter_addresses.cc  gather_scatter_addresses.h  message_queue_interface_lib.cc  message_queue_interface_lib.h  pin_api_to_xed.h  pin_scarab_common_lib.cc  pin_scarab_common_lib.h  scatter_addresses.cc  scatter_addresses.h  uop_generator.c  (+5 more)
src/power/: power.param.def  power.param.h  power.stat.def  power_intf.c  power_intf.h  power_scarab_config.cc  power_scarab_config.h
src/prefetcher/: l2l1pref.c  l2l1pref.h  l2l1pref.param.def  l2l1pref.param.h  l2l1pref.stat.def  l2markv_pref.c  l2markv_pref.h  l2way_pref.c  l2way_pref.h  pref.param.def  pref.param.h  pref.stat.def  pref_2dc.c  pref_2dc.h  pref_2dc.param.def  pref_2dc.param.h  pref_common.c  pref_common.h  pref_ghb.c  pref_ghb.h  pref_ghb.param.def  pref_ghb.param.h  pref_markov.c  pref_markov.h  pref_markov.param.def  pref_markov.param.h  pref_phase.c  pref_phase.h  pref_phase.param.def  pref_phase.param.h  pref_stream.c  pref_stream.h  pref_stride.c  pref_stride.h  pref_stride.param.def  pref_stride.param.h  pref_stridepc.c  pref_stridepc.h  pref_stridepc.param.def  pref_stridepc.param.h  (+7 more)
src/ramulator/: .gitignore  ALDRAM.cpp  ALDRAM.h  CMakeLists.txt  Cache.cpp  Cache.h  Config.cpp  Config.h  Controller.cpp  Controller.h  DDR3.cpp  DDR3.h  DDR4.cpp  DDR4.h  DRAM.h  DSARP.cpp  DSARP.h  GDDR5.cpp  GDDR5.h  HBM.cpp  HBM.h  LPDDR3.cpp  LPDDR3.h  LPDDR4.cpp  LPDDR4.h  Makefile  Memory.cpp  Memory.h  MemoryFactory.cpp  MemoryFactory.h  Processor.cpp  Processor.h  README.md  Refresh.cpp  Refresh.h  Request.h  SALP.cpp  SALP.h  ScarabWrapper.cpp  ScarabWrapper.h  (+11 more)
src/shared_mem_queue/: SPSCQueueOPT.h  build.sh  shm_queue_interface_lib.cc  shm_queue_interface_lib.h  shmmap.h
src/test/: .gitignore  Makefile  different_scatter_types.s  dummy_globals.c  exception_custom_handler.c  exception_not_taken.c  exception_taken.c  gather_not_kmask.s  gather_scatter.out  gather_scatter.s  gather_scatter_wrongpath.s  inst_with_two_loads.out  inst_with_two_loads.s  isa_test.s  loop_gather_scatter.s  message_queue_interface_lib_test.cc  message_test_case.h  scalar_mov_port_binding_test.s  scarab_dummy_client_test.cc  server_client_socket_test.cc  shmq_test_pin.cc  shmq_test_scarab.cc  simple_loop.out  simple_loop.s  simple_loop.trace.bz2  simple_loop.trace.golden  vector_mov_port_binding_test.s
src/testing/: CMakeLists.txt  CMakeTestingOptions.cmake  scarab_test_helper.h  test_main.cc
(+103 files in other folders)
